<resources>
    <string name="app_name" translatable="false">Heart Rate Monitor</string>
    <string name="english_language_short">English</string>
    <string name="finnish_language_short">Finnish</string>
    <string name="connect_button">Connect</string>
    <string name="bluetooth_disabled_warning">Bluetooth is disabled, can\'t connect</string>
    <string name="device_selection">Connect to a device</string>
    <string name="device_selection_dropdown">Select a device</string>
    <string name="exit_button">Exit</string>
    <string name="refresh_button">Refresh</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="highlight_button">Add mark</string>
    <string name="toggle_data">Toggle data monitoring</string>
    <string name="data_on">Stop recording</string>
    <string name="data_off">Start recording</string>
    <string name="data_header">Heart rate monitoring</string>
    <string name="save_file">Save to file</string>
    <string name="default_preview">No device data available</string>
    <string name="default_history">No history</string>
    <string name="exit_confirmation">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_devices_available">No devices currently available</string>
    <string name="missing_permissions">Bluetooth permissions missing, can\'t continue</string>
    <string name="connection_hint">If you can\'t see your device in the dropdown menu, make sure it\'s turned on</string>
    <string name="disconnect_warning">Are you sure you want to disconnect? All unsaved data will be lost!</string>
    <string name="clear">Clear history</string>
    <string name="clear_warning">Are you sure you want to clear all heart rate data?</string>
    <string name="save_notice">Data cannot be saved while still recording.</string>
    <string name="save_success">Successfully saved file to downloads</string>
    <string name="save_failed">Could not save data to a file!</string>
    <string name="goggles_on">Goggles on</string>
    <string name="exercise_begins">Exercise begins</string>
    <string name="activity">Activity</string>
    <string name="exercise_ends">Exercise ends</string>
    <string name="other">Other</string>
    <string name="bpm">BPM</string>
    <string name="packet_timestamp">Packet timestamp</string>
    <string name="heart_rate_bpm">Heart rate (BPM)</string>
    <string name="rr_interval_ms">RR interval (ms)</string>
    <string name="highlight">Highlight</string>
    <string name="no_data_notice">No data collected</string>
    <string name="metadata_lower">metadata</string>
    <string name="from_start">Time from start</string>
    <string name="recording_recovery_notice">An unsaved recording was detected in the device. Save to file?</string>
</resources>
