<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".DataCollectionActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_header"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/device_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/disconnect_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/device_data"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />


    <ScrollView
        android:id="@+id/history_scroll_view"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/device_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="12"
            android:scrollbars="vertical"
            android:text="@string/default_history"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/device_data"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>

    <TextView
        android:id="@+id/device_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_preview"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/history_scroll_view"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/monitor_toggle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/highlight_button"
        app:layout_constraintTop_toBottomOf="@+id/device_data"
        app:layout_constraintVertical_bias="0.858" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_file"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/highlight_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_data"
        app:layout_constraintVertical_bias="0.858" />

    <ToggleButton
        android:id="@+id/monitor_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_data"
        android:textOff="@string/data_off"
        android:textOn="@string/data_on"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintTop_toBottomOf="@+id/device_data"
        app:layout_constraintVertical_bias="0.858" />

    <Button
        android:id="@+id/highlight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highlight_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clear_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toBottomOf="@+id/device_data"
        app:layout_constraintVertical_bias="0.858" />

    <Button
        android:id="@+id/other_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/highlight_button"
        app:layout_constraintEnd_toEndOf="@+id/highlight_button"
        app:layout_constraintStart_toStartOf="@+id/highlight_button" />

    <Button
        android:id="@+id/exercise_ends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_ends"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/other_button"
        app:layout_constraintEnd_toEndOf="@+id/highlight_button"
        app:layout_constraintStart_toStartOf="@+id/highlight_button" />

    <Button
        android:id="@+id/activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/exercise_ends_button"
        app:layout_constraintEnd_toEndOf="@+id/highlight_button"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/highlight_button" />

    <Button
        android:id="@+id/exercise_begins_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_begins"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activity_button"
        app:layout_constraintEnd_toEndOf="@+id/highlight_button"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/highlight_button" />

    <Button
        android:id="@+id/goggles_on_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goggles_on"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/exercise_begins_button"
        app:layout_constraintEnd_toEndOf="@+id/highlight_button"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/highlight_button" />

</androidx.constraintlayout.widget.ConstraintLayout>